# wealthpath-optimizer

./: .env.example  .gitignore  README.md  docker-compose.yml  ssh-keygen -t ed25519 -C "tu-email@ejemplo.com"  ssh-keygen -t ed25519 -C "tu-email@ejemplo.com".pub
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/api/routes/: health.py  optimization.py
backend/core/: optimizer.py
backend/db/: supabase.py
backend/models/: schemas.py
backend/tests/: test_api.py  test_optimizer.py
docs/: DEPLOY_DOKPLOY.md
frontend/: .env.example  Dockerfile  next.config.js  package.json  tailwind.config.js
frontend/public/: manifest.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/components/charts/: CapitalChart.tsx  ConsumptionChart.tsx  ExpensesBarChart.tsx  SummaryDonut.tsx  index.ts
frontend/src/components/dashboard/: Navbar.tsx  ParametersControl.tsx  SavingGoal.tsx  TransactionsTable.tsx  index.ts
frontend/src/components/ui/: button.tsx  card.tsx  progress.tsx  slider.tsx
frontend/src/lib/: api.ts  supabase.ts
sql/: schema.sql  schema_completo.sql
